--- a/Report/ChessGameReport.tex
+++ b/Report/ChessGameReport.tex
@@ -8,7 +8,7 @@
 \graphicspath{ {./figures/} }
 \usepackage{subcaption}
 \usepackage{amsmath}
-\usepackage{lineno}
+% \usepackage{lineno}
 \usepackage{hyperref}
 \usepackage{mlmodern}
 % \linenumbers
@@ -52,7 +52,6 @@ sorting=none]{biblatex}
 \begin{abstract}
     The project aims to develop a chess game that is smooth, lightweight in size and performance while providing decent experience to player.
 \end{abstract}
-\tableofcontents
 
 %%%%%% Main Text %%%%%%
 %A few notes on the main text:  
@@ -117,7 +116,7 @@ User interface and its elements is created with SDL2 graphic libraries and \href
     \item Moves are managed automatically, alternating between two colors after each move.
     \item To highlight chess piece's movement, color of initial and ending cells of that piece is mixed with a yellowish color.
     \item To highlight check status of king piece, color of its cell is mixed with a redish color.
-    \item To highlight checkmate status of king piece, color of its cell is changed to bright red color.
+    \item To highlight checkmate status of king piece, color of its cell is mixed with a \_\_\_ color.
     \item To highlight stalemate status of king piece, color of its cell is mixed with a \_\_\_ color.
 \end{itemize}
 \subsection{Game Logic}
@@ -132,14 +131,14 @@ User interface and its elements is created with SDL2 graphic libraries and \href
     \item In case of stalemate or checkmate, any chess piece cannot be moved . In such case, (need addition for this)
 \end{itemize}
 \subsection{AI Opponent}
-    something
+\begin{itemize}
+    \item something
           \begin{itemize}
               \item something
-              \item something
-              \item something
           \end{itemize}
+\end{itemize}
 \subsection{Game state management}
-The game is managed using the combination of 2D array board representation and FEN notation, the latter stores information needed to reconstruct the board from nothing. Turn management is done right after a legal move had been made. After each legal move, both array representation and FEN notation is updated. For undo and redo features, deques of FEN notation is used to load the last corresponding move and maintain the maximum execution of each function. FEN notation of initial state is also saved as a constant string for creation of new game.
+The game is managed using the combination of 2D array board representation and FEN notation, the latter stores information needed to reconstruct the board from nothing. Turn management is done right after a legal move had been made. After each legal move, both array representation and FEN notation is updated. For undo and redo features, deque of FEN notation is used to maintain the maximum execution of each function. FEN notation of initial state is also saved as a constant string for creation of new game.
 
 \subsection{Save and Load Functionality}
 to be added
@@ -149,15 +148,15 @@ While being dragged, selected chess piece follows the mouse's cursor smoothly.
 The game's logic, game state management and GUI(graphic user interface) is written in C and C++, using SDL2 and nanoSVG libraries for graphic. The AI used for player versus computer mode is \href{https://github.com/official-stockfish/Stockfish}{Stockfish}, a popular and strong open-source AI chess engine. Current board state is written to plain text file in FEN notation, which can be decoded to get the complete information of board state stored. 
 
 More to be written
-\section{DESIGN DOCUMENT}
+\section{Design document}
 To be written after finished
-\section{IMPLEMENTATION DETAILS}
+\section{Implementation Details}
 The code in organized in separate header and implementation files.
 Each major component of the game is determined in a class.
 nanoSVG libraries is used for converting vector images into bitmap images. SDL2 is used to render the game and handle user's inputs.
-\section{TESTING}
+\section{Testing}
 The project is tested by playtesting, in which simple games are played and all interaction that player might do is performed in order to detect bugs and ensure good experience.
-\section{FUTURE IMPROVEMENTS}
+\section{Future Improvements}
 \begin{enumerate}
     \item Implementation of board rotation for better user experience.
     \item Fix the inconsistency between x-axis, y-axis of screen and row, column of 2D array representation. The inconsistency made board's methods seems confusing to use. 
