Fixed problem with alternating moves after promotion

--- a/Report/ChessGameReport.tex
+++ b/Report/ChessGameReport.tex
@@ -60,7 +60,7 @@ sorting=none]{biblatex}
 %\textbf{Level 2 in bold}
 %\textit{Level 3 in italics}
 % \pagebreak
-
+\tableofcontents
 \chapter{REQUIREMENT}
 
 %%%%% Citations in the text %%%%%%
