Fixed fen updating in AI's move

--- a/Report/ChessGameReport.tex
+++ b/Report/ChessGameReport.tex
@@ -18,7 +18,7 @@
 \usepackage[style=nejm, 
 citestyle=numeric-comp,
 sorting=none]{biblatex}
-\addbibresource{sample.bib}
+% \addbibresource{sample.bib}
 
 %%%%%% Title %%%%%%
 % Full titles can be a maximum of 100 characters, including spaces. Do not use abbreviations.
@@ -61,7 +61,7 @@ sorting=none]{biblatex}
 %\textit{Level 3 in italics}
 % \pagebreak
 \tableofcontents
-\chapter{REQUIREMENT}
+\chapter{Requirement}
 
 %%%%% Citations in the text %%%%%%
 \section{Game modes}
