Implemented begin and end state button (double arrow left and right)

--- a/Report/ChessGameReport.tex
+++ b/Report/ChessGameReport.tex
@@ -9,7 +9,7 @@
 \usepackage{subcaption}
 \usepackage{amsmath}
 % \usepackage{lineno}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage{mlmodern}
 % \linenumbers
 \selectlanguage{english}
@@ -31,7 +31,7 @@ sorting=none]{biblatex}
 % Use an asterisk (*) to identify the corresponding author, and be sure to include that person’s e-mail address. Use symbols (in this order: †, ‡, §, ||, ¶, #, ††, ‡‡, etc.) for author notes, such as present addresses, “These authors contributed equally to this work” notations, and similar information.
 \begin{otherlanguage}{vietnam}
     \author{Nguyễn Hoàng Thuận Phát, Huỳnh Tấn Phúc}    
-    \date{\selectlanguage{english}\today}
+    \date{Submission day: \selectlanguage{english}\today}
 \end{otherlanguage}
 %%%%%% Affiliations %%%%%%
 
